update swagger doc detail
